--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@mui/x-data-grid": "^7.26.0",
     "@mui/x-date-pickers": "^7.26.0",
     "@mui/x-tree-view": "^7.26.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/three": "^0.175.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
