--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@mui/x-data-grid": "^7.26.0",
     "@mui/x-date-pickers": "^7.26.0",
     "@mui/x-tree-view": "^7.26.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.5.1",
